--- a/nginx/nginx/sites-enabled/kibana.conf
+++ b/nginx/nginx/sites-enabled/kibana.conf
@@ -17,7 +17,7 @@ server {
     proxy_pass http://kibana;
     proxy_set_header Host $host;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-    #auth_basic "Restricted";
-    #auth_basic_user_file /etc/nginx/conf.d/kibana.htpasswd;
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/conf.d/kibana.htpasswd;
   }
 }
