ports for syslog and ports for logspout (docker)

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,5 +1,14 @@
 input {
   tcp {
+    port => 514
+    type => syslog
+  }
+  udp {
+    port => 514
+    type => syslog
+  }
+
+  tcp {
     port => 5140
     type => docker
   }
