--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -34,7 +34,7 @@ RUN chmod +x /docker-entrypoint.sh
 COPY logstash.conf /opt/logstash/config/logstash.conf
 
 VOLUME ["/opt/logstash/config", "/opt/logstash/data"]
-EXPOSE 5140
+EXPOSE 514 5140
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ['logstash']
