--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -16,6 +16,17 @@ input {
     port => 5140
     type => docker
   }
+
+  tcp {
+    port => 5959
+    type => json
+    codec => json
+  }
+  udp {
+    port => 5959
+    type => json
+    codec => json
+  }
 }
 
 filter {
