Refresh, using official images where possible.

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -56,6 +56,6 @@ filter {
 }
 
 output {
-  elasticsearch { host => "elasticsearch" }
+  elasticsearch { hosts => ["elasticsearch"] }
   stdout { codec => rubydebug }
 }
