--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,5 @@
- #
-FROM nginx:1.7
-MAINTAINER ccg <devops@ccg.murdoch.edu.au>
+FROM nginx:1.10
+MAINTAINER https://github.com/muccg/
 
 RUN rm -rf /etc/nginx
 COPY nginx /etc/nginx
