build and deplog the logstash container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       depends_on:
         - elasticsearch 
 
+  # throw away nginx container for local testing
   nginx:
       build: nginx/
       command: nginx
