--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,61 +1,52 @@
 input {
-  tcp {
-    port => 1514
-    type => syslog
-  }
-  udp {
-    port => 1514
-    type => syslog
-  }
 
   tcp {
     port => 5140
-    type => docker
-  }
-  udp {
-    port => 5140
-    type => docker
+    tags => ["docker"]
+    codec => json
   }
 
-  tcp {
-    port => 5959
-    type => json
-    codec => json
-  }
   udp {
-    port => 5959
-    type => json
+    port => 5140
+    tags => ["docker"]
     codec => json
   }
+
 }
 
 filter {
-  if [type] == "syslog" {
-    grok {
-      match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
-      add_field => [ "received_at", "%{@timestamp}" ]
-      add_field => [ "received_from", "%{host}" ]
-    }
-    syslog_pri { }
-    date {
-      match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
-    }
+
+  # drop messages from this stack in test/dev
+  if [docker][image] =~ /^docker.elastic.co/ {
+      drop { }
   }
 
-  if [type] == "docker" {
-    grok {
-      match => { "message" => "%{DATA:docker_timestamp} %{DATA:docker_cid} %{DATA:docker_cname}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:docker_message}" }
-      add_field => [ "received_at", "%{@timestamp}" ]
-      add_field => [ "received_from", "%{host}" ]
-    }
-    syslog_pri { }
-    date {
-      match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
-    }
+  # some people run docker-compose in a container
+  if [docker][image] =~ /^docker\/compose/ {
+      drop { }
   }
+
+  # drop messages from logspout itself in test/dev
+  if [docker][image] =~ /^muccg\/logspout-logstash/ {
+      drop { }
+  }
+
 }
 
 output {
-  elasticsearch { hosts => ["elasticsearch"] }
-  stdout { codec => rubydebug }
+
+  # output to default install of elasticsearch with default passwords in test/dev
+  elasticsearch {
+    hosts => ["http://elasticsearch:9200"]
+    user => elastic
+    password => changeme
+  }
+
+  # enable to see messages on stdout
+  #stdout {
+  #  codec => rubydebug {
+  #    metadata => true
+  #  }
+  #}
+
 }
